Fixed navigation on mobile bug

--- a/css/style.css
+++ b/css/style.css
@@ -200,6 +200,10 @@ margin-bottom: 4px;
     display: inline-block;
 }
 
+#menu-bar {
+    display: none;
+}
+
 @media only screen and (min-width: 792px){
     .navbar-resoponsive{
         display: none;
